Fix overflow

--- a/frontend/src/jsMain/typescript/io/github/jervnorsk/projects/website/client/web/app/jn-website-app.component.sass
+++ b/frontend/src/jsMain/typescript/io/github/jervnorsk/projects/website/client/web/app/jn-website-app.component.sass
@@ -1,3 +1,6 @@
+html
+    overflow: hidden
+
 main
     display: flex
 
@@ -6,8 +9,6 @@ main
 
     color: white
     font-family: fantasy
-
-    overflow: hidden
 
 router-outlet
     display: none
